--- a/web/src/index.css
+++ b/web/src/index.css
@@ -17,11 +17,8 @@
 
 a {
     font-weight: 500;
-    color: #646cff;
+    color: inherit;
     text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
 }
 
 body {
